improve landing page

--- a/static/index.html
+++ b/static/index.html
@@ -79,6 +79,7 @@
     <div class="container">
         <h1>Localhook</h1>
         <h2>Webhook Testing Made Simple</h2>
+        <img src="static/carbon.png" alt="test" width="800">
         <p>
             Localhook is a lightweight tool built in Go to receive and debug webhooks locally. Perfect for developers
             who need to test webhooks during development.
